Fixed spacing

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,6 +1,16 @@
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
 body {
   font-family: 'Roboto', sans-serif !important;
   padding: 50px;
+}
+
+.content {
+  width: 610px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .limit {
@@ -18,6 +28,7 @@ h1, .logo {
 }
 
 .counts {
+  margin: 0 auto;
   font-family: 'Roboto', sans-serif !important;
   font-size: 24px;
   background-color: #c0392b;
@@ -28,6 +39,33 @@ h1, .logo {
   width: 250px;
 }
 
+#users li {
+  list-style: none;
+  margin-bottom: 3px;
+}
+
+.android_id, .time_sent {
+  display: inline-block;
+  width: 300px;
+  background-color: #ecf0f1;
+}
+
+.colname {
+  display: inline-block;
+  width: 300px;
+  background-color: rgb(231, 76, 60);
+  color: #fff;
+
+}
+
+.list {
+  padding: 0;
+}
+
+.sort {
+  float: right;
+  margin-right: 2px;
+}
 /*.list {
   font-family:sans-serif;
   margin:0;
